@@ -1,4 +1,11 @@
 2004-10-04 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_src_asm.cc, gui/gui_regwin.cc, gui/gui_breadboard.cc:
+	Removed some debugging printfs.
+	* gui/gui_object.cc:
+	With GTK+ 2.2.1 under linux, the gtk_widget_show() was losing
+	the (x,y) position of the window.
+	
+2004-10-04 Scott Dattalo <scott@dattalo.com>
 	* gui/gui_breadboard.cc, gui/gui_breadboard.h:
 	The breadboard expose events invalidated drawing areas which in
 	turn recursively generated expose events. I'm not sure why this
